Changelog
=========

6.7-dev - (unreleased)
----------------------
* Upgrade Step: go to /aq_parent/portal_factory/manage_portal_factory_types
  and set the ExternalDataSpec as factory type
  [tiberich #14467]
* Upgrade Step: go to
  http://www.eea.europa.eu/aq_parent/portal_actions/object_buttons/create_version/manage_propertiesForm
  Change the "Condition (Expression)" to:
    python: object.restrictedTraverse('@@can_version')()
  [tiberich #14361]
* Feature: WIP: added a new compound field, frequency_of_updates
  [tiberich #14361]
* Upgrade Step: create a new faceted navigation page that lists expired
  indicators (they will have the ExpirationDate set in the past)
  [tiberich #14361]
* Upgrade Step: go to /prefs_install_products_form, install CompoundField
  [tiberich #14361]
* Feature: don't index anymore themes and indicator codes as keywords.
  [ghicaale refs #14383]

6.6 - (2013-04-17)
------------------
* Change: use esri map and geotags widget instead of geo coverage for Assessments
  [ichimdav #8523]
* Feature: Automatically synch daviz workflow state as we do for
  static figures.
  [demarant fixes #14298]
* Bug fix: don't fail for already published figures when syncing state.
  [demarant refs #9974, #10001]
* Change: Removed unnecessary margin for Daviz in indicator.
  Better wording on buttons.
  [demarant refs #9571]
* Bug fix: give better information to users about 2 words minimum
  requirement in IMS text content
  [tiberich #14175]
* Bug fix: alphabetically sort Related Policy Documents in aggregated edit
  and specification view.
* Bug fix: fix data source provenance in assessment view
  [tiberich #14273]

6.5 - (2013-03-15)
------------------
* Bug fix: don't break on specification publishing due to discussion API
  changes
  [tiberich]
* Bug fix: conform to api changes in eea.daviz to allow sortable relations
  to Daviz Vizualizations charts
  [tiberich #13993]

6.4 - (2013-02-21)
---------------------