@@ -3,6 +3,9 @@ Changelog
 
 6.7-dev - (unreleased)
 ----------------------
+* Upgrade Step: upgrade the eea.indicators package from Addons in plone
+  control panel
+  [tiberich #14341]
 * Upgrade Step: go to /aq_parent/portal_factory/manage_portal_factory_types
   and set the ExternalDataSpec as factory type
   [tiberich #14467]
